// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Textarea /> should match the snapshot when empty 1`] = `
.c0 {
  width: 100%;
  height: 19.1rem;
  padding: 0.6rem 1rem;
  font-weight: 400;
  font-size: 1.3rem;
  outline: 0;
  border: 1px solid #E3E9F3;
  border-radius: 2px;
  color: #333740;
  background-color: #ffffff;
  line-height: 18px;
}

.c0::-webkit-input-placeholder {
  color: #919BAE;
}

.c0:focus {
  border-color: #78caff;
}

.c0:disabled {
  background-color: #FAFAFB;
  cursor: not-allowed;
  color: #9ea7b8;
}

<textarea
  className="c0"
  placeholder="Write a short description"
/>
`;

exports[`<Textarea /> should match the snapshot when not empty 1`] = `
.c0 {
  width: 100%;
  height: 19.1rem;
  padding: 0.6rem 1rem;
  font-weight: 400;
  font-size: 1.3rem;
  outline: 0;
  border: 1px solid #E3E9F3;
  border-radius: 2px;
  color: #333740;
  background-color: #ffffff;
  line-height: 18px;
}

.c0::-webkit-input-placeholder {
  color: #919BAE;
}

.c0:focus {
  border-color: #78caff;
}

.c0:disabled {
  background-color: #FAFAFB;
  cursor: not-allowed;
  color: #9ea7b8;
}

<textarea
  className="c0"
  value="Short description"
/>
`;
